# BsaLib

./: .gitattributes  .gitignore  BSA.sln  BSAlib.sln  CMakeLists.txt  README.md  build.bat  build_cmake.bat  docs.md
BsaCL/: .gitignore  CMakeLists.txt
BsaCL/BsaCL_Fortran/: CMakeLists.txt  bsacl.f90  bsacl_c.f90  bsacl_impl.F90  bsacl_impl.f90  postbuild.bat
BsaCL/include/: _devtypes.h  _errtypes.h  _extdata.h  _macros.h  _msgtypes.h  bsacl.h
BsaCL/src/: CMakeLists.txt  _base.h  bsacl.c  bsacl.cl
app/: CMakeLists.txt  bsa.F90  bsa.f90
doc/: index.html  search.html
doc/interface/: bsa_closeunitsatend.html  bsa_computebrdecomp.html  bsa_computepeakfactors.html  bsa_dovalidatemodaldata.html  bsa_dovalidatezonedeltas.html  bsa_enablegpu.html  bsa_enableonlypremesh.html  bsa_enablevisualmode.html  bsa_exportbisptofile.html  bsa_exportbrdecomp.html  bsa_exportextremevaluestofile.html  bsa_exportmodaldata.html  bsa_exportmomenttofile.html  bsa_exportpsdtofile.html  bsa_exportskewness.html  bsa_finalise.html  bsa_forcebsaclsexecution.html  bsa_generatebsainputfiles.html  bsa_getusedmodeshapes.html  bsa_init.html  bsa_iscleaned.html  bsa_isfullcomp.html  bsa_printbsaheader.html  bsa_run.html  bsa_savecoordinatestofile.html  bsa_setairdensity.html  bsa_setanalysistype.html  bsa_setbfmmlr.html  bsa_setbispexportcallback.html  bsa_setbrmexportdefaultmode.html  bsa_setclassicmode.html  bsa_setdeltasvalidationpolicy.html  bsa_setexportappendmode.html  bsa_setexportdirectory.html  bsa_setexportfileformat.html  bsa_setexportincurrdir.html  bsa_setglobalrotmatw2g.html  bsa_setincidenceangles.html  bsa_setkeptmodalshapes.html  bsa_setloadednodaldofs.html  (+48 more)
doc/lists/: absint.html  modules.html  procedures.html
doc/module/: bsalib.html
doc/sourcefile/: bsalib.f90.html
doc/src/: BsaLib.F90
doc/tipuesearch/: tipuesearch_content.js
readme_files/: bsadata.md  extdata.md
src/: BSA.sln  BSA.vfproj  BSAlib.sln  BSAlib.vfproj  BsaLib.F90  BsaLib.f90  CMakeLists.txt  bsa.f90
src/BsaLib/: BSAlib.vfproj  BsaLib.f90  precisions
src/BsaLib/CONSTANTS/: CONSTANTS.f90
src/BsaLib/IO/: Logging.f90  LoggingImpl.f90  io.f90
src/BsaLib/bsa/: BsaLibImpl.f90
src/BsaLib/bsa/classic/: BsaClassicImpl.f90
src/BsaLib/bsa/data/: BsaLibData.f90  BsaLibDataImpl.f90
src/BsaLib/bsa/functions/: functions.f90  functionsImpl.f90
src/BsaLib/bsa/meshing/: BsaMesherImpl.f90
src/BsaLib/bsa/meshing/point/: MPoint.f90
src/BsaLib/bsa/meshing/policy/: MPolicy.f90
src/BsaLib/bsa/meshing/zones/: M2DPolygZone.f90  MRectZone.f90  MRectZoneImpl.f90  MTriangZone.f90  MTriangZoneImpl.f90  MZone.f90  _interp_poly2d.fi
src/BsaLib/settings/: Settings.f90  SettingsImpl.f90
src/BsaLib/structure/: StructureData.f90  StructureImpl.f90
src/BsaLib/timing/: Timer.f90
src/BsaLib/utils/: utility.f90
src/BsaLib/wind/: WindPSDImpl.f90  WindSetImpl.f90  WindType.f90
src/CONSTANTS/: CONSTANTS.F90  CONSTANTS.f90  _CONSTANTS.F90  _CONSTANTS.f90
src/IO/: BsaIO.F90  BsaIO.f90  BsaIOImpl.F90  BsaIOImpl.f90  LoggingImpl.f90  io.f90
src/bsa/: BsaLibImpl.F90  BsaLibImpl.f90
src/bsa/classic/: BsaClassicImpl.F90  BsaClassicImpl.f90
src/bsa/data/: BsaLibData.F90  BsaLibData.f90  BsaLibDataImpl.F90  BsaLibDataImpl.f90
src/bsa/functions/: functions.F90  functions.f90  functionsImpl.F90  functionsImpl.f90
src/bsa/meshing/: BsaMesherImpl.F90  BsaMesherImpl.f90
src/bsa/meshing/point/: MPoint.F90  MPoint.f90
src/bsa/meshing/policy/: MPolicy.F90
src/bsa/meshing/zones/: M2DPolygZone.F90  M2DPolygZone.f90  MRectZone.F90  MRectZone.f90  MRectZoneImpl.F90  MRectZoneImpl.f90  MTriangZone.F90  MTriangZoneImpl.F90  MTriangZoneImpl.f90  MZone.F90  MZone.f90  _shared_poly2d.fi
src/include/zones/: _interp_poly2d.fi
src/settings/: Settings.F90  Settings.f90  SettingsImpl.F90  SettingsImpl.f90
src/structure/: StructureData.F90  StructureData.f90  StructureImpl.F90  StructureImpl.f90
src/timing/: Timer.F90  Timer.f90
src/utils/: utility.F90  utility.f90
src/wind/: WindPSDImpl.F90  WindPSDImpl.f90  WindSetImpl.F90  WindSetImpl.f90  WindType.F90  WindType.f90
